==> DecaMeron23/Tesi-Magistrale/STMCubeIDE/STM32Cube_FW_WB_V1.24.0/Projects/P-NUCLEO-WB55.Nucleo/Applications/Thread/Thread_Coap_Generic_ThreadX/Core/Src/app_entry.c <==
#include "app_common.h"
#include "main.h"
#include "app_entry.h"
#include "app_thread.h"
#include "app_conf.h"
#include "hw_conf.h"
#include "tx_api.h"
#include "stm_logging.h"
#include "shci_tl.h"
#include "stm32_lpm.h"
#include "dbg_trace.h"
#include "shci.h"
#include "otp.h"
#include "advanced_memory_manager.h"
#include "stm32_mm.h"
#include "tx_api.h"
#define POOL_SIZE (CFG_TL_EVT_QUEUE_LENGTH * 4U * DIVC((sizeof(TL_PacketHeader_t) + TL_EVENT_FRAME_SIZE), 4U))
#define POOL_TRACE_SIZE  CFG_AMM_VIRTUAL_APP_TRACE_BUFFER_SIZE + CFG_AMM_VIRTUAL_MEMORY_NUMBER * AMM_VIRTUAL_INFO_ELEMENT_SIZE
#define TX_APP_MEM_POOL_SIZE                     (1024*24)
#define AMM_BCKGND_TASK_STACK_SIZE    (256*7)
#define AMM_BCKGND_TASK_PRIO          (9)
#define AMM_BCKGND_TASK_PREEM_TRES    (0)
#define TRC_BCKGND_TASK_STACK_SIZE    (256*7)
#define TRC_BCKGND_TASK_PRIO          (9)
#define TRC_BCKGND_TASK_PREEM_TRES    (0)
#define C_SIZE_CMD_STRING       256U
#define RX_BUFFER_SIZE          8U

static void SystemPower_Config(void)
{
  /**
   * Select HSI as system clock source after Wake Up from Stop mode
   */
  LL_RCC_SetClkAfterWakeFromStop(LL_RCC_STOP_WAKEUPCLOCK_HSI);

  /* Initialize low power manager */
  UTIL_LPM_Init();

  /* Initialize the CPU2 reset value before starting CPU2 with C2BOOT */
  LL_C2_PWR_SetPowerMode(LL_PWR_MODE_SHUTDOWN);

#if (CFG_USB_INTERFACE_ENABLE != 0)
  /**
   *  Enable USB power
   */
  HAL_PWREx_EnableVddUSB();
#endif /* CFG_USB_INTERFACE_ENABLE != 0 */

  return;
}

static void APPE_SysStatusNot( SHCI_TL_CmdStatus_t status )
{
  switch (status)
  {
    case SHCI_TL_CmdBusy:
      tx_mutex_get(&MtxShciId, TX_WAIT_FOREVER  );
      break;

    case SHCI_TL_CmdAvailable:
      tx_mutex_put(&MtxShciId );
      break;

    default:
      break;
  }
  return;
}

static void APPE_SysEvtReadyProcessing( void )
{
  /* Traces channel initialization */
  TL_TRACES_Init();

  APP_THREAD_Init(&byte_pool_shci);

  /**
   *  When the application wants to disable the output of traces, it is not 
   *  enough to just disable the UART. Indeed, CPU2 will still send its traces 
   *  through IPCC to CPU1. By default, CPU2 enables the debug traces. The 
   *  command below will indicate to CPU2 to disable its traces if 
   *  CFG_DEBUG_TRACE is set to 0.
   *  The result is a gain of performance for both CPUs and a reduction of power
   *  consumption, especially in dense networks where there can be a massive
   *  amount of data to print.
   */
  SHCI_C2_DEBUG_TracesConfig_t APPD_TracesConfig;
  /* Set to 1 to enable Thread traces, 0 to disable */
  APPD_TracesConfig.thread_config = CFG_DEBUG_TRACE;
  
  SHCI_C2_DEBUG_Init_Cmd_Packet_t DebugCmdPacket =
  {
    {{0,0,0}},
    {(uint8_t *)NULL,
    (uint8_t *)&APPD_TracesConfig,
    (uint8_t *)NULL,
    0,
    0,
    0}
  };
  
  SHCI_C2_DEBUG_Init(&DebugCmdPacket);

#ifdef TX_LOW_POWER
  //UTIL_LPM_SetOffMode(1U << CFG_LPM_APP, UTIL_LPM_ENABLE);
  APP_THREAD_ThreadX_LowPowerEnable( LOWPOWER_SLEEPMODE );
#endif // TX_LOW_POWER
  return;
}

static void ShciUserEvtProcess(ULONG argument)
{
  UNUSED(argument);

  for(;;)
  {
    /* USER CODE BEGIN SHCI_USER_EVT_PROCESS_1 */

    /* USER CODE END SHCI_USER_EVT_PROCESS_1 */
     tx_semaphore_get(&SemShciNotify, TX_WAIT_FOREVER);
     shci_user_evt_proc();
    /* USER CODE BEGIN SHCI_USER_EVT_PROCESS_2 */

    /* USER CODE END SHCI_USER_EVT_PROCESS_2 */
  }
}

void shci_cmd_resp_wait(uint32_t timeout)
{
  UNUSED(timeout);
  tx_semaphore_get(&SemShciId, TX_WAIT_FOREVER);
  return;
}

void HAL_GPIO_EXTI_Callback(uint16_t GPIO_Pin)
{

  switch(GPIO_Pin)
  {
    case BUTTON_SW1_PIN:
        APP_THREAD_SW1_Task();
        break;
        
    case BUTTON_SW2_PIN:
        APP_THREAD_SW2_Task();
        break;
        
    case BUTTON_SW3_PIN: 
        break;
        
    default:
        break;
  }
}
